# yaaal

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
docs/: design_document.md
examples/: demo-caller.ipynb  demo-prompt.ipynb  demo-templates.ipynb
examples/prompts/: chain_of_thought.py  memo_writer.py
notebooks/: demo-prompt.ipynb  demo.ipynb
scripts/: keep-examples-output.py
src/yaaal/: __init__.py
src/yaaal/core/: __init__.py  _types.py  agent.py  base.py  caller.py  exceptions.py  flow.py  handler.py  prompt.py  template.py  tool.py  tools.py  validator.py
src/yaaal/prompts/: __init__.py  chain_of_thought.py  extractor.py  memo_writer.py  summarizer.py
src/yaaal/tools/: __init__.py  web.py
src/yaaal/types/: base.py  core.py  openai_compat.py  utils.py
src/yaaal/types_/: base.py  core.py  utils.py
src/yaaal/utilities/: __init__.py  async_helpers.py  limiters.py  log_helpers.py  parse.py  path_helpers.py  process.py
tests/: test_utilities.py
tests/core/: test_caller.py  test_handler.py  test_prompt.py  test_template.py  test_tool.py  test_tools.py  test_types.py  test_validator.py
tests/types/: test_openai_compat.py  test_utils.py
tests/types_/: test_openai_compat.py  test_utils.py
tests/utilities/: test_limiters.py  test_parse.py
